--- a/ParOnline2017/nbproject/project.properties
+++ b/ParOnline2017/nbproject/project.properties
@@ -46,8 +46,7 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.0.0.jar}:\
-    ${libs.eclipselink.classpath}
+    ${file.reference.postgresql-42.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
