--- a/ParOnline2017/web/WEB-INF/web.xml
+++ b/ParOnline2017/web/WEB-INF/web.xml
@@ -6,10 +6,16 @@
 	 version="3.1">
     <session-config>
         <session-timeout>
-            30
+            60
         </session-timeout>
     </session-config>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
+    <resource-ref>
+        <description>postgreSQL_Datasource</description>
+        <res-ref-name>jdbc/postgres</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 </web-app>
