--- a/ParOnline/web/WEB-INF/web.xml
+++ b/ParOnline/web/WEB-INF/web.xml
@@ -9,12 +9,24 @@
         <servlet-class>py.una.pol.par.controladores.CategoriaABMServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>TransaccionServlet</servlet-name>
-        <servlet-class>py.una.pol.par.controladores.TransaccionServlet</servlet-class>
+        <servlet-name>TransaccionABMServlet</servlet-name>
+        <servlet-class>py.una.pol.par.controladores.TransaccionABMServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>py.una.pol.par.controladores.LoginServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ComprarServlet</servlet-name>
+        <servlet-class>py.una.pol.par.controladores.ComprarServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>BuscarServlet</servlet-name>
+        <servlet-class>py.una.pol.par.controladores.BuscarServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ProductoABMServlet</servlet-name>
+        <servlet-class>py.una.pol.par.controladores.ProductoABMServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>UsuarioABMServlet</servlet-name>
@@ -25,12 +37,24 @@
         <url-pattern>/CategoriaABMServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>TransaccionServlet</servlet-name>
-        <url-pattern>/TransaccionServlet</url-pattern>
+        <servlet-name>TransaccionABMServlet</servlet-name>
+        <url-pattern>/TransaccionABMServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ComprarServlet</servlet-name>
+        <url-pattern>/ComprarServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>BuscarServlet</servlet-name>
+        <url-pattern>/BuscarServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProductoABMServlet</servlet-name>
+        <url-pattern>/ProductoABMServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
