--- a/ParOnline/web/WEB-INF/web.xml
+++ b/ParOnline/web/WEB-INF/web.xml
@@ -62,7 +62,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
     <resource-ref>
         <description>postgreSQL_Datasource</description>
